##############################################################
###
##############################################################
[build-system]
requires = [
  "setuptools",
  "wheel",
  "build",
]
build-backend = "setuptools.build_meta"

[tool.sdv4_installdeps]
fail_on_error = true
install = ["apk", "apt-get", "brew", "yum"]

[tool.sdv4_installdeps.apk]
deps = []

[tool.sdv4_installdeps.apt-get]
deps = []

[tool.sdv4_installdeps.brew]
deps = []

[tool.sdv4_installdeps.yum]
deps = []

############################################################################
### Black
############################################################################
[tool.black]
line-length = 120
target-version = ['py38', 'py311']
