##########################################################################
### PyPI package info
### (not that this is getting uploaded to pypi, this is so I can `pip install .`)
##########################################################################
[metadata]
name = baltimorestrings.leetcode_stuff
summary = notes and scratch files
description_file =
    README.md
author = baltimorestrings
home_page = https://github.com/baltimorestrings/argparse_showhelp
license = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.11
long_description = Just a thing
version = 0.0.1

[options.packages.find]
where=src

[options]
packages = find_namespace:

package_dir =
    =src

python_requires =
    >= 3.11
